logs/exceptions-2025-06-17.log
[2025-06-17 18:59:42:5942] [31MERROR[39M
[31muncaughtException: Identifier 'sanitizeJsonString' has already been declared[39m
[31mc:\Users\AMIYA PIYUSH\OneDrive\Desktop\code_backend\routes\debugger\generate.js:727[39m
[31mfunction sanitizeJsonString(str) {[39m
[31m^[39m

[31mSyntaxError: Identifier 'sanitizeJsonString' has already been declared[39m
[31m    at internalCompileFunction (node:internal/vm:77:18)[39m
[31m    at wrapSafe (node:internal/modules/cjs/loader:1288:20)[39m
[31m    at Module._compile (node:internal/modules/cjs/loader:1340:27)[39m
[31m    at Module._extensions..js (node:internal/modules/cjs/loader:1435:10)[39m
[31m    at Module.load (node:internal/modules/cjs/loader:1207:32)[39m
[31m    at Module._load (node:internal/modules/cjs/loader:1023:12)[39m
[31m    at Module.require (node:internal/modules/cjs/loader:1235:19)[39m
[31m    at require (node:internal/modules/helpers:176:18)[39m
[31m    at Object.<anonymous> (c:\Users\AMIYA PIYUSH\OneDrive\Desktop\code_backend\index.js:21:23)[39m
[31m    at Module._compile (node:internal/modules/cjs/loader:1376:14)[39m

Error: Identifier 'sanitizeJsonString' has already been declared
Stack:
c:\Users\AMIYA PIYUSH\OneDrive\Desktop\code_backend\routes\debugger\generate.js:727
function sanitizeJsonString(str) {
^

SyntaxError: Identifier 'sanitizeJsonString' has already been declared
    at internalCompileFunction (node:internal/vm:77:18)
    at wrapSafe (node:internal/modules/cjs/loader:1288:20)
    at Module._compile (node:internal/modules/cjs/loader:1340:27)
    at Module._extensions..js (node:internal/modules/cjs/loader:1435:10)
    at Module.load (node:internal/modules/cjs/loader:1207:32)
    at Module._load (node:internal/modules/cjs/loader:1023:12)
    at Module.require (node:internal/modules/cjs/loader:1235:19)
    at require (node:internal/modules/helpers:176:18)
    at Object.<anonymous> (c:\Users\AMIYA PIYUSH\OneDrive\Desktop\code_backend\index.js:21:23)
    at Module._compile (node:internal/modules/cjs/loader:1376:14)
[2025-06-17 18:59:53:5953] [31MERROR[39M
[31muncaughtException: Identifier 'sanitizeJsonString' has already been declared[39m
[31mc:\Users\AMIYA PIYUSH\OneDrive\Desktop\code_backend\routes\debugger\generate.js:727[39m
[31mfunction sanitizeJsonString(str) {[39m
[31m^[39m

[31mSyntaxError: Identifier 'sanitizeJsonString' has already been declared[39m
[31m    at internalCompileFunction (node:internal/vm:77:18)[39m
[31m    at wrapSafe (node:internal/modules/cjs/loader:1288:20)[39m
[31m    at Module._compile (node:internal/modules/cjs/loader:1340:27)[39m
[31m    at Module._extensions..js (node:internal/modules/cjs/loader:1435:10)[39m
[31m    at Module.load (node:internal/modules/cjs/loader:1207:32)[39m
[31m    at Module._load (node:internal/modules/cjs/loader:1023:12)[39m
[31m    at Module.require (node:internal/modules/cjs/loader:1235:19)[39m
[31m    at require (node:internal/modules/helpers:176:18)[39m
[31m    at Object.<anonymous> (c:\Users\AMIYA PIYUSH\OneDrive\Desktop\code_backend\index.js:21:23)[39m
[31m    at Module._compile (node:internal/modules/cjs/loader:1376:14)[39m

Error: Identifier 'sanitizeJsonString' has already been declared
Stack:
c:\Users\AMIYA PIYUSH\OneDrive\Desktop\code_backend\routes\debugger\generate.js:727
function sanitizeJsonString(str) {
^

SyntaxError: Identifier 'sanitizeJsonString' has already been declared
    at internalCompileFunction (node:internal/vm:77:18)
    at wrapSafe (node:internal/modules/cjs/loader:1288:20)
    at Module._compile (node:internal/modules/cjs/loader:1340:27)
    at Module._extensions..js (node:internal/modules/cjs/loader:1435:10)
    at Module.load (node:internal/modules/cjs/loader:1207:32)
    at Module._load (node:internal/modules/cjs/loader:1023:12)
    at Module.require (node:internal/modules/cjs/loader:1235:19)
    at require (node:internal/modules/helpers:176:18)
    at Object.<anonymous> (c:\Users\AMIYA PIYUSH\OneDrive\Desktop\code_backend\index.js:21:23)
    at Module._compile (node:internal/modules/cjs/loader:1376:14)
[2025-06-17 19:00:12:012] [31MERROR[39M
[31muncaughtException: Identifier 'sanitizeJsonString' has already been declared[39m
[31mc:\Users\AMIYA PIYUSH\OneDrive\Desktop\code_backend\routes\debugger\generate.js:727[39m
[31mfunction sanitizeJsonString(str) {[39m
[31m^[39m

[31mSyntaxError: Identifier 'sanitizeJsonString' has already been declared[39m
[31m    at internalCompileFunction (node:internal/vm:77:18)[39m
[31m    at wrapSafe (node:internal/modules/cjs/loader:1288:20)[39m
[31m    at Module._compile (node:internal/modules/cjs/loader:1340:27)[39m
[31m    at Module._extensions..js (node:internal/modules/cjs/loader:1435:10)[39m
[31m    at Module.load (node:internal/modules/cjs/loader:1207:32)[39m
[31m    at Module._load (node:internal/modules/cjs/loader:1023:12)[39m
[31m    at Module.require (node:internal/modules/cjs/loader:1235:19)[39m
[31m    at require (node:internal/modules/helpers:176:18)[39m
[31m    at Object.<anonymous> (c:\Users\AMIYA PIYUSH\OneDrive\Desktop\code_backend\index.js:21:23)[39m
[31m    at Module._compile (node:internal/modules/cjs/loader:1376:14)[39m

Error: Identifier 'sanitizeJsonString' has already been declared
Stack:
c:\Users\AMIYA PIYUSH\OneDrive\Desktop\code_backend\routes\debugger\generate.js:727
function sanitizeJsonString(str) {
^

SyntaxError: Identifier 'sanitizeJsonString' has already been declared
    at internalCompileFunction (node:internal/vm:77:18)
    at wrapSafe (node:internal/modules/cjs/loader:1288:20)
    at Module._compile (node:internal/modules/cjs/loader:1340:27)
    at Module._extensions..js (node:internal/modules/cjs/loader:1435:10)
    at Module.load (node:internal/modules/cjs/loader:1207:32)
    at Module._load (node:internal/modules/cjs/loader:1023:12)
    at Module.require (node:internal/modules/cjs/loader:1235:19)
    at require (node:internal/modules/helpers:176:18)
    at Object.<anonymous> (c:\Users\AMIYA PIYUSH\OneDrive\Desktop\code_backend\index.js:21:23)
    at Module._compile (node:internal/modules/cjs/loader:1376:14)
[2025-06-17 19:01:08:18] [31MERROR[39M
[31muncaughtException: Identifier 'sanitizeJsonString' has already been declared[39m
[31mc:\Users\AMIYA PIYUSH\OneDrive\Desktop\code_backend\routes\debugger\generate.js:727[39m
[31mfunction sanitizeJsonString(str) {[39m
[31m^[39m

[31mSyntaxError: Identifier 'sanitizeJsonString' has already been declared[39m
[31m    at internalCompileFunction (node:internal/vm:77:18)[39m
[31m    at wrapSafe (node:internal/modules/cjs/loader:1288:20)[39m
[31m    at Module._compile (node:internal/modules/cjs/loader:1340:27)[39m
[31m    at Module._extensions..js (node:internal/modules/cjs/loader:1435:10)[39m
[31m    at Module.load (node:internal/modules/cjs/loader:1207:32)[39m
[31m    at Module._load (node:internal/modules/cjs/loader:1023:12)[39m
[31m    at Module.require (node:internal/modules/cjs/loader:1235:19)[39m
[31m    at require (node:internal/modules/helpers:176:18)[39m
[31m    at Object.<anonymous> (c:\Users\AMIYA PIYUSH\OneDrive\Desktop\code_backend\index.js:21:23)[39m
[31m    at Module._compile (node:internal/modules/cjs/loader:1376:14)[39m

Error: Identifier 'sanitizeJsonString' has already been declared
Stack:
c:\Users\AMIYA PIYUSH\OneDrive\Desktop\code_backend\routes\debugger\generate.js:727
function sanitizeJsonString(str) {
^

SyntaxError: Identifier 'sanitizeJsonString' has already been declared
    at internalCompileFunction (node:internal/vm:77:18)
    at wrapSafe (node:internal/modules/cjs/loader:1288:20)
    at Module._compile (node:internal/modules/cjs/loader:1340:27)
    at Module._extensions..js (node:internal/modules/cjs/loader:1435:10)
    at Module.load (node:internal/modules/cjs/loader:1207:32)
    at Module._load (node:internal/modules/cjs/loader:1023:12)
    at Module.require (node:internal/modules/cjs/loader:1235:19)
    at require (node:internal/modules/helpers:176:18)
    at Object.<anonymous> (c:\Users\AMIYA PIYUSH\OneDrive\Desktop\code_backend\index.js:21:23)
    at Module._compile (node:internal/modules/cjs/loader:1376:14)
